# pythonsdk

./: README.md  pyproject.toml  requirements.txt
doc/: client.md
doc/controllers/: 5g-edge-platform-discovery.md  5g-mec-performance-api.md  accounts.md  accountservicecontroller.md  callbacknotifications.md  callbacks.md  campaigns.md  category.md  claims.md  client-logging.md  csp-profile.md  device-management.md  devices.md  deviceservicecontroller.md  exclusions.md  files.md  firmware.md  firmwareupgrades.md  groups.md  history.md  licensecancellationcandidatedeviceslist.md  licensemanagement.md  licenses.md  locations.md  mec-sites.md  oauth-authorization.md  observations.md  plans.md  reports.md  repository.md  requests.md  server-logging.md  service-endpoint-discovery.md  service-instance-operations.md  service-management.md  service-onboarding.md  service-profile.md  service-profiles.md  service-registry.md  service-request.md  (+8 more)
doc/models/: access-intents.md  access-key.md  account-device-1.md  account-device-list-1.md  account-device-list.md  account-device.md  account-information-response.md  accountidentifier.md  accuracy-mode-enum.md  active-indicator-2.md  active-indicator.md  add-devices-request.md  add-devices-response-message.md  add-or-remove-device-request.md  add-or-remove-device-resp-1.md  add-or-remove-device-resp.md  additional-params.md  address.md  advance-config.md  aggregate-session-report-request.md  aggregate-usage-error.md  aggregate-usage-item.md  body.md  (+470 more)
mergedapi/: configuration.py  mergedapi_client.py
tests/: http_response_catcher.py
(+548 files in other folders)
